assets/css/style.css
@charset "UTF-8";
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,600,700);

/* Color Scheme
Red : #B74C47
Black : #413E3F
LightGray : #DAD7CD
White : #F3F3F3
DarkGray : #595959
*/

/* Global Declarations */

.bold {
    font-weight: 700;
}

body {
    position: relative;
    font-family: "Source Sans Pro";
}

a.clickable {
    color: #595959;
    background-color: white;
    border: 2px solid #595959;
    margin: 0 auto;
    text-align: center;
    padding: 10px 20px 10px 20px;
}

.button-wrapper {
    min-width: 100%;
    margin: 0 auto;
    text-align: center;
    display: block;
}


/* Header Styles */

#header {
    min-height: 80vh;
    min-width: 100%;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

#header h1 {
    margin-top: 100px;
}

#header #home-title h1 b {
    font-weight: 20px;
}

#home-title h2 {
    color: white;
}

#home-title h1 {
    color: white;
    font-weight: bold;
    font-size: 60px;
    margin-top: 0;
}

#home-title p:nth-of-type(1) {
    font-size: 40px;
    margin-bottom: 0;
}

#home-title p:nth-of-type(2) {
    font-size: 30px;
    font-weight: 300;
}
.page main {
    padding-top: 40px;
    padding-bottom: 40px;
}

#nav-menu {
    width: 80%;
    text-align: right;
    z-index: 99;
    position: fixed;
    right: 0;
}

body > .logo {}

#nav-menu li {
    color: white;
    display: inline-block;
    padding-left: 2%;
    padding-right: 2%;
    padding-top: 2%;
    padding-bottom: 1%;
    font-family: "Source Sans Pro";
    font-size: 1.2em;
}

#nav-menu li a {
    text-decoration: none;
    letter-spacing: .1em;
}

#nav-menu li a:link,
a:visited {
    color: white;
}

.logo {
    text-align: center;
    width: 80px;
    height: 80px;
}

#nav-wrap {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    padding-top: 15px;
    padding-bottom: 15px;
}

#menu {
    display: none;
}

.topHeader {
    background: transparent;
    transition: all .35s;
}

.nav-wrap {
    background: rgba(0, 0, 0, .5);
    transition: all .35s;
    z-index: 999;
    position: fixed !important;
}


/* Ethan's Nav Hover */

#nav-menu li {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    position: relative;
    overflow: hidden;
}

#nav-menu li:before {
    content: "";
    position: absolute;
    z-index: -1;
    left: 50%;
    right: 50%;
    bottom: 0;
    background: white;
    height: 4px;
    -webkit-transition-property: left, right;
    transition-property: left, right;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}

#nav-menu li:hover:before,
#nav-menu li:focus:before,
#nav-menu li:active:before {
    left: 0;
    right: 0;
}


/* End */


/* Footer Styles */

footer {
    bottom: 0;
    margin-top: 143px;
}

footer .logo {
    margin: 0 auto;
    width: 147px;
    height: 147px;
    padding-bottom: 37px;
}

footer .logo img {
    width: 147px;
    height: 147px;
}

.footer-bottom {
    position: relative;
    position: bottom 0;
    background-color: #413E3F;
    width: 100%;
    color: #B5B5B5;
    margin-top: 37px;
}

.footer-bottom .legal-text {
    text-align: center;
    color: #c1c1c1;
    font-size: 15px;
    margin: 4px;
    font-weight: 300;
}

.legal-text:first-child {
    padding-top: 33px;
}

.footer-sitemap {
    font-weight: 300;
}

.footer-sitemap li {
    padding: 0;
    padding-right: 12px;
    padding-left: 12px;
    display: inline-block;
    margin-bottom: 33px;
}

.footer-sitemap li:first-child {
    border-right: 1px solid #B5B5B5;
}

.footer-sitemap li:nth-child(2) {
    border-right: 1px solid #B5B5B5;
}

.footer-sitemap li:nth-child(3) {
    border-right: 1px solid #B5B5B5;
}

.footer-sitemap ul {
    text-align: center;
}

.footer-sitemap a {
    text-transform: uppercase;
    font-size: 11px;
    color: #c1c1c1;
}


/* Ethan's Footer Hover */

.footer-sitemap a {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}

.footer-sitemap a:hover,
.footer-sitemap a:focus,
.footer-sitemap a:active {
    -webkit-transform: translateY(-3px);
    transform: translateY(-3px);
}


/* End */

#footer-wrap {
    background-color: #595959;
    padding-top: 37px;
}

img {
    text-align: center;
}

a {
    text-decoration: none;
    float: left;
}

li {
    display: inline-block;
    padding: 5px;
}

.footer-sitemap ul {
    margin-bottom: 0;
}

#logo {
    background-color: #595959;
    padding-top: 35px;
}


/* Home Styles */
#home-title {
    color: white;
    height: 100%;
    padding-top: 40px;
    z-index: 999;
}
#home-title b {
    font-weight: 20px;
}

#home-title h2 {
    color: white;
}


#home-title h1 {
    color: white;
    font-weight: bold;
    font-size: 60px;
    margin-top: 0;
}

#home-title p:nth-of-type(1) {
    font-size: 40px;
    margin-bottom: 0;
}

#home-title p:nth-of-type(2) {
    font-size: 30px;
    font-weight: 300;
}

#about-home {
    text-align: center;
    margin-top: 50px;
    margin-bottom: 50px;
}

.line {
    border-top: 2px solid #595959;
    width: 80%;
    margin: 0 auto;
}

#works {
    text-align: center;
    margin-top: 50px;
}
/* ... */

